@@ -27,9 +27,13 @@ on lmfit.
 
 from .smaterials import SMaterial, MaterialList
 from .smaterials import Layer, LayerStack
+from .smaterials import CrystalStack, PseudomorphicStack001
 
 from .models import Model, LayerModel
 from .models import KinematicalModel
 from .models import SpecularReflectivityModel
+from .models import SimpleDynamicalCoplanarModel
+from .models import DynamicalSKinematicalLModel
+from .models import DynamicalModel
 
 from .fit import fit_xrr
