@@ -1,3 +1,4 @@
+* improve handling of SiGe and AlGaAs alloy: alloying on atomic level
 * add relaxation parameter to PseudomoprhicMaterial to model partially relaxed
   material
 * fix fwhm_exp for very narrow peaks
@@ -7,6 +8,8 @@
 * new subpackage simpack for diffraction and reflectivity simulations from
   thin film samples. So far implemented are
   - a basic kinematical diffraction model
+  - two dynamical diffraction models (simplified and general 2-beam theory)
+  - one mixed dynamical(substrate)/kinematical(layers) model
   - a model for specular reflectivity calculations using a Parrat-like
     formalism
 * fwhm_exp function was moved to math's subpackage! This was necessary in
